Adaption of classicthesis template.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,14 @@
-*.bat
-*.log
-DOS2UNIX.EXE
-Examples/multiToC.tex
-multiToC.tex
-Examples/xetex.def
-desktop.ini
-FrontBackmatter/*.aux
-*.aux
-ClassicThesis-blx.bib
-*.blg
-ClassicThesis.run.xml
-*.lot
-*.lol
-*.lof
-*.bbl
-*.out
-*.toc
-__FOR_CTAN_UPLOAD.txt
+thesis.aux
+thesis.bbl
+thesis.blg
+thesis.loa
+thesis.lof
+thesis.lol
+thesis.log
+thesis.lot
+thesis.out
+thesis.pdf
+thesis.run.xml
+thesis.synctex.gz
+thesis.toc
+thesis-blx.bib
